# value-of-information

./: .gitmodules  README.md  conftest.py  example.py  main.py  pyproject.toml  pytest.ini  pytest_extra_slow.sh  pytest_with_extra_slow.sh  requirements.txt  simulation.py  study_cost_benefit.py
.run/: pytest in tests.run.xml
tests/: __init__.py  example_runs.py  expected_voi_t.py  explicit_b_draw.py  explicit_bayes.py  explicit_update.py  infinite.py  input_generators.py  integral_voi_t.py  sd.py  sd_B.py  seeds.py  shared.py  solve_for_threshold_b.py  standard_error_mean_voi.py  test.py  test_explicit_b_draw.py  test_integral_voi_t.py  threshold_update.py  threshold_vs_explicit.py
tests/end_to_end/: mean_voi.py  standard_error_mean_voi.py
tests/param_generators/: lognorm_norm.py  metalog_norm.py  norm_norm.py
tests/unit/: expected_voi_t.py  explicit_b_draw.py  explicit_bayes.py  infinite.py  sd.py  solve_for_threshold_b.py
value_of_information/: __init__.py  bayes.py  constants.py  cost_benefit.py  decision.py  decision_distribution.py  decision_explicit_b.py  rounding.py  signal_cost_benefit.py  simulation.py  study_cost_benefit.py  utils.py  voi.py
