[tool.poetry]
name = "value-of-information"
version = "0.0.0"
description = ""
authors = ["tadamcz <tmkadamcz@gmail.com>"]

[tool.poetry.dependencies]
bayes_continuous = {git = "git@github.com:tadamcz/bayes-continuous.git", rev = "f0536058240f477703abc006778d7692e44a824f"}
python = ">=3.8.12,<3.9"
numpy = "^1.22.3"
scipy = "^1.8.0"
pytest = "^7.0.1"
pandas = "^1.4.1"
metalogistic = "^0.0.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
