[tool.poetry]
name = "value-of-information"
version = "0.0.0"
description = ""
authors = ["tadamcz <tmkadamcz@gmail.com>"]

[tool.poetry.dependencies]
bayes_continuous = {git = "https://github.com/tadamcz/bayes-continuous.git", rev = "26960486b84db4da6d32949c939822d882d06aba"}
python = ">=3.8.12,<3.9"
numpy = "^1.22.3"
scipy = "^1.8.0,<1.10"
pytest = "^7.0.1"
pandas = { version = "^2"}
sigfig = "^1.3.0"
pytest-xdist = "^2.5.0"
pytest-kwparametrize = "^0.0.3"
float-table = {git = "https://github.com/tadamcz/float-table", rev="main"}
jinja2 = "^3.1.2"
tabulate = "^0.9.0"

[tool.poetry.dev-dependencies]
metalogistic = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
